--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(fontcache SHARED SDL_FontCache.h SDL_FontCache.c)
-find_package(PkgConfig)
-pkg_check_modules(SDL2 REQUIRED sdl2 SDL2_ttf)
-target_link_libraries(fontcache ${SDL2_LIBRARIES})
+add_library(fontcache STATIC SDL_FontCache.h SDL_FontCache.c)
+find_package(SDL2 REQUIRED)
+find_package(SDL2_ttf REQUIRED)
+target_link_libraries(fontcache ${SDL2_LIBRARIES} ${SDL2_TTF_LIBRARIES})
